# vival

./: .gitignore  Dockerfile  ddclient.conf  docker-compose.yml  nginx.conf  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
config/: ddclient.conf  nginx.conf
nginx/: nginx.conf
src/: app.py  components.py  data.py  definitions.py
src/data/: database.py  generate.py  prompts.py
